<resources>
    <string name="app_name">Call Genius</string>
    <string name="signin_google">Sign in with Google</string>
    <string name="signin_email">Sign in with Email</string>
    <string name="title_home">Home</string>
    <string name="title_notes">Notes</string>
    <string name="title_recordings">Recordings</string>
    <string name="title_user">User</string>
    <string name="loading">Loading...</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="signin">Signin</string>
    <string name="register">Register</string>
    <string name="AlreadyUser">Already a User?</string>
    <string name="NotUser">Not a User?</string>
    <string name="signout">Signout</string>
    <string name="user">UserProfile</string>

    <!-- Preference Titles -->
    <string name="Application">Application</string>
    <string name="Notifications">Notifications</string>

    <!-- Notes Recycler -->
    <string name="Call_Status">Call Status</string>

    <!-- Arrow -->
    <string name="arrow">Arrow</string>

    <string name="title_search">Search</string>
    <string name="search_hint">Search Call Genius</string>

</resources>
