<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/register_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#00008577"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:navigationIcon="@drawable/arrow_back"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo_register"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/logo" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/EmailField2"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:met_baseColor="#19191A"
            app:met_errorColor="#FFC107"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="Email:"
            app:met_primaryColor="#1AA722" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/PasswordField2"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:met_baseColor="#1A1A1B"
            app:met_errorColor="#FFC107"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelText="Password:"
            app:met_minCharacters="6"
            app:met_primaryColor="#1AA722" />

        <Button
            android:id="@+id/RegisterButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:background="#1AA722"
            android:text="@string/register"
            android:textColor="#FAFFFFFF" />

        <TextView
            android:id="@+id/NotUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:linksClickable="false"
            android:text="@string/AlreadyUser" />

        <Button
            android:id="@+id/SigninSwitchButton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="#00FFFFFF"
            android:text="@string/signin"
            android:textColor="#1AA722" />
    </LinearLayout>

</LinearLayout>